[package]
name = "chr-reatlas"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "a renderer/reatlaser for CHR tables in .nes roms"
homepage = "https://github.com/yynaa/chr-reatlas"
repository = "https://github.com/yynaa/chr-reatlas"
readme = "README.md"
keywords = ["nes", "graphics"]
categories = ["graphics", "parsing"]

[dependencies]
log = {version = "^0.4.0"}
arbitrary-int = {version = "^2.0.0"}
bitvec = {version = "^1.0.0"}
image = {version = "^0.25.0"}
thiserror = {version = "^2.0.0"}
serde = {version = "^1.0.0", optional = true, features = ["derive"]}
