[package]
name = "reatlaser"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "a gui for chr-reatlas"
homepage = "https://github.com/yynaa/chr-reatlas"
repository = "https://github.com/yynaa/chr-reatlas"
readme = "README.md"
publish = false

[dependencies]
chr-reatlas = { path = "../chr-reatlas", features = ["serde"] }
pretty_env_logger = {version = "^0.5.0"}
serde = {version = "^1.0.0", features = ["derive"]}
toml = {version = "^0.9.0"}
raylib = { version = "^5.5.0", features = ["wayland"] }
anyhow = {version = "^1.0.0"}
rfd = { version = "^0.16.0" }
dirs = { version = "^6.0.0" }
